Помогите решить слайдерный вопрос

--- a/source/less/header-background.less
+++ b/source/less/header-background.less
@@ -218,7 +218,8 @@ display: none;
     height: 651px;
     position: absolute;
     top: -13%;
-    left: 49.9%;
+    right: -110px;
+    margin-left: auto;
     background-color: #65a93c;
     background-image: url(../img/index-background-mobile.png);
     z-index: -10000;
