--- a/source/less/live-example.less
+++ b/source/less/live-example.less
@@ -360,9 +360,111 @@
     line-height: 60px;
     margin-top: 7px;
     margin-bottom: 65px;
-    margin-left: 22px;
+    margin-left: 0;
+    display: flex;
+    margin-left: 78px;
+}
+.live-example__main-content {
+  display: flex;
+}
+.live-example__main-content-left-column {
+  display: flex;
+  flex-direction: column;
+}
+.live-example__content {
+  flex-direction: row;
+  display: flex;
+  max-width: 1220px;
+}
+.live-example__numbers-plus-price {
+  flex-direction: column;
+  display: flex;
+}
+.live-example__price {
+  margin-left: 0;
+}
+.live-example__sub {
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 53px;
+  margin-left: 78px;
+  max-width: 432px;
+  margin-top: 82px;
+}
+.live-example__numbers-plus-price {
+    margin-top: 15px;
+    margin-left: 78px;
+}
+.live-example__numbers-sub:first-child {
+  padding-top: 5px;
+  max-width: 162px;
+  padding-right: 27px;
+  text-align: center;
+  padding-left: 8px;
+  margin-right: 16px;
+  background-size: 162px 72px;
+}
+.live-example__numbers-sub-header:first-child {
+  margin-bottom: 9px;
+  margin-left: -7px;
+}
+.live-example__numbers-sub-content-low-weight {
+  padding-left: 10px;
+  background-color: #fff;
+  max-width: 198px;
+  margin-left: -17px;
+  padding-right: 0;
+  margin-top: 1px;
+}
+.live-example__numbers-sub-content-total-time {
+  background-color: #fff;
+  max-width: 127px;
+  margin-left: -6px;
+  margin-top: 2px;
+  padding-left: 0;
+  padding-right: 0;
+}
+.live-example__price {
+  max-width: 326px;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  margin-top: 28px;
+  padding-left:0;
+}
+.live-example__how-many-u-spent {
+  width: 175px;
+}
+.live-example__price-fifteen-thousand {
+  width: 90px;
+}
+.live-example__slider {
+  margin-top: 120px;
+  margin-left: 90px;
+  margin-right: -28px;
+  position: relative;
+  background-color: #f2f2f2;
 }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
