--- a/source/less/how-it-is-work.less
+++ b/source/less/how-it-is-work.less
@@ -182,4 +182,9 @@
   margin-top: 0;
   margin-left: 79px;
 }
+.how-it-is-work__sub-text {
+  font-size: 16px;
+  line-height: 24px;
+  margin-top: 32px;
+}
 }
