--- a/source/less/how-it-is-work.less
+++ b/source/less/how-it-is-work.less
@@ -2,28 +2,8 @@
 @tablet: 768px;
 @desktop: 1220px;
 
-.how-it-is-work {
-  padding-top: 15px;
-  max-width: 280px;
-  margin: 0 auto;
-  padding-bottom: 29px;
-  display: flex;
-  flex-direction: column;
-}
 
-.how-it-is-work__header {
-  font-size: 36px;
-  line-height: 60px;
-  font-family: "Oswald-Regular", sans-serif;
-  color: #111111;
-  margin-bottom: 29px;
-}
 
-.how-it-is-work__sub {
-  display: flex;
-  margin-bottom: 14px;
-  align-items: center;
-}
 
 .how-it-is-work__green {
   margin-right: 21px;
@@ -61,6 +41,27 @@
     margin-top: 5px;
     margin-bottom: 20px;
   }
+  .how-it-is-work__header {
+    font-size: 36px;
+    line-height: 60px;
+    font-family: "Oswald-Regular", sans-serif;
+    color: #111111;
+    margin-bottom: 27px;
+  }
+
+  .how-it-is-work__sub {
+    display: flex;
+    margin-bottom: 20px;
+    align-items: center;
+  }
+  .how-it-is-work {
+    padding-top: 15px;
+    max-width: 280px;
+    margin: 0 auto;
+    padding-bottom: 23px;
+    display: flex;
+    flex-direction: column;
+  }
 
 }
 
@@ -74,6 +75,7 @@
     line-height: 60px;
     font-weight: normal;
     margin-top: 30px;
+    margin-bottom: 31px;
   }
   .how-it-is-work__green {
     width: 80px;
@@ -146,9 +148,11 @@
   }
   .how-it-is-work {
     margin-bottom: 7px;
+    padding-left: 17px;
+    padding-top: 13px;
   }
 }
-
+/*
 @media (min-width:@desktop) {
   .how-it-is-work {
     max-width: 1220px;
@@ -188,3 +192,4 @@
   margin-top: 32px;
 }
 }
+*/
