--- a/source/less/communicating.less
+++ b/source/less/communicating.less
@@ -14,16 +14,6 @@
   display: flex;
 }
 
-.communicating__offer-communicating {
-  max-width: 122px;
-  font-size: 16px;
-  line-height: 20px;
-  color: #111111;
-  text-transform: uppercase;
-  font-family: "Oswald-Regular", sans-serif;
-  margin-right: 21px;
-}
-
 .communicating__address {
   font-family: "Arial-Regular", sans-serif;
   max-width: 135px;
@@ -38,6 +28,24 @@
 
 .communicating__address-index {
   margin-top: -1px;
+}
+
+@media (min-width:@mobile) {
+  .communicating__main-text {
+    max-width: 280px;
+    margin: 0 auto;
+    display: flex;
+}
+.communicating__offer-communicating {
+  max-width: 122px;
+  font-size: 16px;
+  line-height: 20px;
+  color: #111111;
+  text-transform: uppercase;
+  font-family: "Oswald-Regular", sans-serif;
+  margin-right: 19px;
+}
+
 }
 
 @media (min-width:@tablet) {
@@ -59,14 +67,14 @@
   margin-top: 38px;
   font-size: 20px;
   line-height: 25px;
-  margin-left: 36px;
+  margin-left: 45px;
   max-width: 190px;
 }
 
 .communicating__address {
   text-align: right;
-  margin-right: 39px;
-  margin-top: 35px;
+  margin-right: 30px;
+  margin-top: 36px;
   line-height: 19px;
   font-size: 16px;
   line-height: 20px;
@@ -90,7 +98,7 @@
 
 
 }
-
+/*
 @media (min-width:@desktop) {
   .communicating-form {
     position: absolute;
@@ -124,3 +132,5 @@
 }
 
 }
+
+*/
