--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -56,10 +56,6 @@
   margin-top: 23px;
 }
 
-.footer__social-image {
-  margin-right: 37px;
-}
-
 .footer__social-image:nth-child(2n) {
   margin-right: 40px;
 }
@@ -76,7 +72,36 @@
     flex-direction: column;
     align-items: center;
   }
+
+.footer__social-links {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    /* padding-left: 26px; */
+    margin-bottom: 18px;
+    margin-top: 22px;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    max-width: 125px;
+    justify-content: center;
+    display: flex;
 }
+.footer__social-links-li-facebook {
+  margin-left: 3px;
+}
+.footer__logo {
+  width: 100%;
+  text-align: center;
+  border-bottom: 1px solid #d9d9d9;
+  padding-bottom: 27px;
+}
+.footer__logo-image {
+  width: 159px;
+  height: 24px;
+}
+}
+
 @media (min-width:@tablet){
 .footer {
   max-width: 768px;
@@ -84,13 +109,16 @@
 }
 
 .footer__logo {
+  margin-top: 18px;
+  margin-left: -4px;
   border: 0;
-  width: 132px;
+  width: 145px;
+
 }
 
 .footer__footer-content {
   width: 761px;
-  max-width: 708px;
+  max-width: 719px;
   flex-direction: row;
   justify-content:space-between;
 }
@@ -104,6 +132,8 @@
   padding-top: 0;
   border: 0;
   width: 164px;
+  margin-top: -16px;
+  margin-left: -7px;
 }
 
 .footer__social-links-catalog {
@@ -117,8 +147,35 @@
 .footer-index {
  padding-top: 13px;
 }
-
+.footer__social-links{
+  margin: 0 auto;
 }
+.footer__social-links {
+  margin-left: 182px;
+  margin-top: -14px;
+  padding-left: 0;
+}
+.footer__social-image-vk {
+  width: 30px;
+  height: 15px;
+}
+.footer__social-image-insta {
+  width: 23px;
+  height: 23px;
+}
+.footer__social-image {
+  margin-right: 29px;
+}
+.footer__social-image-fb {
+  width: 14px;
+  height: 28px;
+}
+.footer__logo-image {
+  width: 152px;
+  height: 24px;
+}
+}
+/*
 @media (min-width:@desktop) {
   .footer {
     max-width: 1440px;
@@ -139,3 +196,4 @@
     margin-right: 33px;
 }
 }
+*/
