--- a/source/less/map.less
+++ b/source/less/map.less
@@ -34,7 +34,7 @@
   margin-left: 0;
 }
 }
-
+/*
 @media (min-width:@desktop) {
 .map {
   max-width: 1440px;
@@ -45,4 +45,4 @@
   width: 100%;
   margin-left: 0;
 }
-}
+}*/
