--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -23,25 +23,6 @@
 @tablet: 768px;
 @desktop: 1220px;
 
-
-.page-header__menu-logos-links {
-  background-color: @white;
-  padding-top: 11px;
-  padding-bottom: 12px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-left: 20px;
-  margin-right: 78px;
-}
-
-.menu-main__sub-menu-elem {
-  border-top: 1px solid #e6e6e6;
-  list-style-type: none;
-  padding-top: 22px;
-  padding-bottom: 20px;
-}
-
 .menu-main__sub-menu-elem:last-child {
   border-bottom: 1px solid #ededed;
 }
@@ -66,11 +47,6 @@
   margin: 0 auto;
 }
 
-.page-header__logo-mobile-page {
-  margin-top: 6px;
-  margin-left: -9px;
-}
-
 .header-background {
   max-width: 320px;
   margin: 0 auto;
@@ -86,11 +62,39 @@
   .page-header__logo-site-image-desktop {
     display: none;
   }
+  .page-header__menu-logos-links {
+    background-color: #fff;
+    padding-top: 11px;
+    padding-bottom: 17px;
+    display: flex;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    max-width: 280px;
+    margin: 0 auto;
 }
+  .page-header__logo-mobile-page {
+    margin-top: 13px;
+    margin-left: -7px;
+}
+.page-header__logo-mobile_menu {
+  margin-top: 8px;
+}
+.menu-main__sub-menu-elem {
+  border-top: 1px solid #e6e6e6;
+  list-style-type: none;
+  padding-top: 22px;
+  padding-bottom: 20px;
+}
+
+}
+
 @media(min-width:@tablet) {
 
   .page-header {
-    max-width: 761px;
+    max-width: 721px;
+    margin: 0 auto;
   }
   .page-header__logo-site-image-mobile{
     display: none;
@@ -113,11 +117,11 @@
   }
   .menu-main__sub {
     display: flex;
-    /*max-width: 438px;*/
+
   }
   .menu-main__sub-menu-elem{
     border: 0;
-    margin-right: 35px;
+    margin-right: 34px;
   }
   .menu-main__sub-menu-elem:last-child {
     border: 0;
@@ -130,13 +134,17 @@
   }
   .page-header__menu-logos-links {
     margin-right: 86px;
-  }
+    margin-left: 7px;
+}
   .menu-main__sub-menu-elem:last-child {
     margin-right: 0;
   }
   .menu-main__sub-menu-elem-link-active {
     border-bottom: 1px solid #68b738;
     padding-bottom: 6px;
+  }
+  .menu-main__sub-menu-elem {
+    padding-top: 18px;
   }
 }
 
