--- a/source/less/programs.less
+++ b/source/less/programs.less
@@ -13,15 +13,6 @@
   margin-bottom: 23px;
 }
 
-.programs__img_program {
-  background-color: #68b738;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  margin-right: 20px;
-  margin-top: 2px;
-}
-
 .programs__name {
   font-size: 24px;
   line-height: 37.02px;
@@ -65,10 +56,6 @@
   padding-top: 18px;
 }
 
-.programs__img_program-img {
-  margin-left: 9px;
-}
-
 .programs__img-running-puma {
   margin-top: 12px;
   margin-left: -8px;
@@ -79,6 +66,9 @@
     max-width: 280px;
     margin: 0 auto;
   }
+  .programs__icon-right-arrow-long {
+    width: 25px;
+  }
   .programs__program-content {
     font-size: 14px;
     line-height: 18px;
@@ -86,18 +76,50 @@
     color: #444444;
     padding-bottom: 22px;
   }
+  .programs__img_program {
+    background-color: #68b738;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    margin-right: 20px;
+    margin-top: 1px;
+}
+.programs__img_program-img {
+  margin-left: 9px;
+  height: 47px;
+}
+.programs__icon-right-arrow-long {
+  width: 23px;
+}
+.programs__icon-right-arrow-very-long {
+  display: none;
+}
+.programs__img-running-puma{
+  margin-left: -9px;
+  height: 35px;
+  width: 68px;
+  margin-top: 7px;
+}
+.programs__program-link-catalog-pro {
+  padding-top: 20px;
+}
+.programs__program-link-catalog-pro-link {
+  margin-right: 13px;
+}
+
 }
 
 @media (min-width: @tablet) {
   .programs {
     max-width: 708px;
+    padding-left: 12px;
     margin: 0 auto;
   }
 
   .programs__img_program {
     position: absolute;
-    top: 89px;
-    right: 43px;
+    top: 93px;
+    right: 40px;
     width: 200px;
     height: 200px;
   }
@@ -131,6 +153,8 @@
     font-size: 16px;
     line-height: 24px;
     padding-right: 0;
+    margin-top: 3px;
+    margin-left: 2px;
   }
   .programs__header-program {
     margin-bottom: 25px;
@@ -140,10 +164,10 @@
     padding-top: 34px;
   }
   .icon-cat-slim {
-    height: 193px;
+    height: 197px;
     width: 139px;
-    margin-top: -12px;
-    margin-left: 31px;
+    margin-top: -16px;
+    margin-left: 33px;
   }
   .icon-right-arrow-verylong {
     height: 11px;
@@ -154,11 +178,44 @@
     max-width: 341px;
   }
   .programs__img-running-puma {
-    width: 268px;
-    height: 36px;
+    width: 315px;
+    height: 112px;
+    margin-left: -57px;
+    margin-top: 44px;
   }
-}
 
+.programs__icon-right-arrow-long {
+  display: none;
+}
+.programs__icon-right-arrow-very-long {
+  display: block;
+  width: 25px;
+  height: 12px;
+  margin-left: 12px;
+}
+.programs__arrow-right-second {
+margin-left: 7px;
+}
+.programs__program-link-catalog-slim {
+  padding-top: 33px;
+    padding-left: 2px;
+}
+.programs__header-program-puma {
+  margin-bottom: 21px;
+}
+.programs__header-program-puma-sub {
+  position: absolute;
+  top: 88px;
+  right: 40px;
+  width: 200px;
+  height: 200px;
+}
+.programs__program-link-catalog-pro {
+  padding-top: 33px;
+  padding-left: 3px;
+}
+}
+/*
 @media (min-width:@desktop) {
   .programs {
     max-width: 1220px;
@@ -245,6 +302,7 @@ max-width: 570px;
     margin-top: 31px;
   }
 }
+*/
 
 
 
