--- a/source/less/live-example.less
+++ b/source/less/live-example.less
@@ -193,13 +193,13 @@
 
 @media (min-width:@tablet) {
 .live-example {
-  max-width: 708px;
-  margin:0 auto;
+  max-width: 768px;
+  margin: 0 auto;
   background-color: inherit;
   border-top: 1px solid #e6e6e6;
 }
 .live-example__content {
-  max-width: 708px;
+  max-width: 768px;
 }
 .live-example__header {
   font-size: 60px;
@@ -207,13 +207,19 @@
   margin-top: 26px;
   margin-bottom: 65px;
   display: flex;
-  margin-left: 8px;
+  margin-left: 37px;
 }
+
+.live-example__main-content {
+  padding-left: 30px;
+  padding-right: 24px;
+}
+
 .live-example__sub {
   font-size: 16px;
   line-height: 24px;
   margin-bottom: 53px;
-  margin-left: -2px;
+  margin-left: -1px;
 }
 .live-example__numbers {
   margin-left: -2px;
@@ -278,7 +284,7 @@
 .live-example__price {
   display: flex;
   align-items: flex-end;
-  margin-left: 150px;
+  margin-left: 156px;
   margin-top: 11px;
 }
 
@@ -312,9 +318,7 @@
 }
 
 .live-example__slider {
-  margin-top: 228px;
-  margin-left: -21px;
-  margin-right: -37px;
+  margin-top: 232px;
   position: relative;
   background-color: #f2f2f2;
   max-width: 768px;
@@ -323,8 +327,8 @@
 .live-example__slider-slide-show-tablet {
   display: block;
   position: absolute;
-  top: -167px;
-  left: 47px;
+  top: -169px;
+  left: 46px;
 }
 
 .live-example__slider-button {
@@ -334,8 +338,8 @@
 
 .live-example__slider-controls {
   max-width: 569px;
-  margin-top: 332px;
-  margin-left: 98px;
+  margin-top: 329px;
+  margin-left: 100px;
   margin-bottom: 48px;
 }
 
@@ -361,11 +365,11 @@
   left: 45.7%;
 }
 .live-example__main-content-left-column {
-  margin-left: 9px;
+  margin-left: 1px;
 }
 
 .live-example__numbers-plus-price {
-  margin-top: 54px;
+  margin-top: 52px;
 }
 
 }
