--- a/source/less/live-example.less
+++ b/source/less/live-example.less
@@ -207,7 +207,7 @@
   margin-top: 26px;
   margin-bottom: 65px;
   display: flex;
-  margin-left: 37px;
+  margin-left: 31px;
 }
 
 .live-example__main-content {
@@ -286,6 +286,10 @@
   align-items: flex-end;
   margin-left: 156px;
   margin-top: 11px;
+}
+
+.live-example__how-many-u-spent {
+  margin-left: 6px;
 }
 
 .live-example__numbers-sub:last-child {
@@ -374,7 +378,7 @@
 
 }
 
-/*Ы
+
 @media (min-width:@desktop) {
   .live-example {
     max-width: 1440px;
@@ -390,7 +394,7 @@
     margin-bottom: 74px;
     margin-left: 0;
     display: flex;
-    margin-left: 78px;
+    margin-left: 104px;
 }
 .live-example__main-content {
   display: flex;
@@ -403,6 +407,7 @@
   flex-direction: row;
   display: flex;
   max-width: 1220px;
+  margin: 0;
 }
 .live-example__numbers-plus-price {
   flex-direction: column;
@@ -484,10 +489,7 @@
 .live-example__content-slider {
   display: flex;
   width: 1440px;
-
   background-color: #f2f2f2;
-  margin-right: 0;
-  margin-left: -33px;
   margin-top: 0px;
 }
 .live-example__slider-on-off-content {
@@ -508,7 +510,6 @@
   margin-bottom: 48px;
 }
 }
-*/
 
 
 
