--- a/source/less/main-index.less
+++ b/source/less/main-index.less
@@ -1,24 +1,23 @@
 @mobile: 320px;
 @tablet: 768px;
 @desktop:1220px;
-/*
+
 @media (min-width:@mobile) {
   .main {
     max-width: 320px;
     margin: 0 auto;
   }
 }
-*/
+
 @media (min-width:@tablet) {
   .main {
     max-width: 768px;
     margin: 0 auto;
   }
 }
-/*
 @media (min-width:@desktop) {
   .main {
     max-width: 1220px;
     margin: 0 auto;
   }
-}*/
+}
