--- a/source/less/map.less
+++ b/source/less/map.less
@@ -33,8 +33,11 @@
 .map__iframe-index {
   margin-left: 0;
 }
+.map__iframe-catalog {
+  margin-left: 0;
+  height: 429px;
 }
-/*
+}
 @media (min-width:@desktop) {
 .map {
   max-width: 1440px;
@@ -45,4 +48,4 @@
   width: 100%;
   margin-left: 0;
 }
-}*/
+}
