--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -149,6 +149,9 @@
 }
 
 @media (min-width:@desktop) {
+  .menu-main {
+    margin-right: 7px;
+  }
   .page-header {
     max-width: 1220px;
     margin: 0 auto;
@@ -179,3 +182,4 @@
   color: #fff;
 }
 }
+
