--- a/source/less/communicating.less
+++ b/source/less/communicating.less
@@ -14,17 +14,7 @@
   display: flex;
 }
 
-.communicating__address {
-  font-family: "Arial-Regular", sans-serif;
-  max-width: 135px;
-  font-size: 14px;
-  line-height: 20px;
-  margin-top: 2px;
-}
 
-.communicating-form {
-  background-color: #f2f2f2;
-}
 
 .communicating__address-index {
   margin-top: -1px;
@@ -36,6 +26,14 @@
     margin: 0 auto;
     display: flex;
 }
+
+.communicating__address {
+  font-family: "Arial-Regular", sans-serif;
+  max-width: 135px;
+  font-size: 14px;
+  line-height: 20px;
+}
+
 .communicating__offer-communicating {
   max-width: 122px;
   font-size: 16px;
@@ -46,14 +44,19 @@
   margin-right: 19px;
 }
 
+.communicating-form {
+  background-color: #f2f2f2;
+  max-width: 320px;
+  margin: 0 auto;
+}
+
 }
 
 @media (min-width:@tablet) {
   .communicating-form {
-    width: 768px;
+    max-width: 768px;
     margin-top: 77px;
     background-color: #f2f2f2;
-    margin-left: -3px;
 }
 
 .communicating__main-text {
@@ -98,7 +101,7 @@
 
 
 }
-/*
+
 @media (min-width:@desktop) {
   .communicating-form {
     position: absolute;
@@ -133,4 +136,3 @@
 
 }
 
-*/
