--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -19,14 +19,6 @@
   border-bottom: 1px solid #d9d9d9;
 }
 
-.footer__social-links {
-  display: flex;
-  padding-left: 26px;
-  margin-bottom: 18px;
-  margin-top: 22px;
-  align-items: center;
-}
-
 .footer__social-links-li {
   list-style-type: none;
 }
@@ -74,32 +66,43 @@
   }
 
 .footer__social-links {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    /* padding-left: 26px; */
-    margin-bottom: 18px;
-    margin-top: 22px;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    max-width: 125px;
-    justify-content: center;
-    display: flex;
+  margin-bottom: 16px;
+  margin-top: 22px;
+  align-items: center;
+  width: 127px;
+  justify-content: space-between;
+  display: flex;
+  margin-left: -7px;
 }
+
 .footer__social-links-li-facebook {
   margin-left: 3px;
 }
+
 .footer__logo {
   width: 100%;
   text-align: center;
   border-bottom: 1px solid #d9d9d9;
+  padding-bottom: 0;
+}
+
+.footer__logo-index {
   padding-bottom: 27px;
 }
+
 .footer__logo-image {
   width: 159px;
   height: 24px;
 }
+
+.footer__logo-catalog {
+  padding-bottom: 0px;
+}
+
+.footer__social-links-catalog {
+  padding-bottom: 2px;
+}
+
 }
 
 @media (min-width:@tablet){
@@ -151,7 +154,7 @@
   margin: 0 auto;
 }
 .footer__social-links {
-  margin-left: 164px;
+  margin-left: 152px;
   margin-top: -14px;
   padding-left: 0;
   max-width: 125px;
@@ -165,7 +168,7 @@
   height: 23px;
 }
 .footer__social-image {
-  margin-right: 29px;
+  margin-right: 28px;
 }
 .footer__social-image-fb {
   width: 14px;
@@ -175,8 +178,11 @@
   width: 152px;
   height: 24px;
 }
+.footer-catalog {
+  padding-top: 41px;
 }
-/*
+}
+
 @media (min-width:@desktop) {
   .footer {
     max-width: 1440px;
@@ -197,4 +203,4 @@
     margin-right: 33px;
 }
 }
-*/
+
