--- a/source/less/how-it-is-work.less
+++ b/source/less/how-it-is-work.less
@@ -46,7 +46,7 @@
     line-height: 60px;
     font-family: "Oswald-Regular", sans-serif;
     color: #111111;
-    margin-bottom: 27px;
+    margin-bottom: 28px;
   }
 
   .how-it-is-work__sub {
@@ -75,7 +75,7 @@
     line-height: 60px;
     font-weight: normal;
     margin-top: 30px;
-    margin-bottom: 31px;
+    margin-bottom: 33px;
   }
   .how-it-is-work__green {
     width: 80px;
@@ -148,17 +148,18 @@
   }
   .how-it-is-work {
     margin-bottom: 7px;
-    padding-left: 15px;
+    padding-left: 0px;
     padding-top: 13px;
   }
 }
-/*
+
 @media (min-width:@desktop) {
   .how-it-is-work {
     max-width: 1220px;
   }
   .how-it-is-work__header {
     margin-top: 60px;
+    margin-left: -5px;
   }
   .how-it-is-work__sub-two-items-main {
     display: flex;
@@ -191,5 +192,9 @@
   line-height: 24px;
   margin-top: 32px;
 }
+.how-it-is-work__sub-two-items-main {
+  margin-left: -7px;
+    margin-top: -2px;
 }
-*/
+}
+
