--- a/source/less/main-catalog.less
+++ b/source/less/main-catalog.less
@@ -36,16 +36,6 @@
   justify-content: space-between;
 }
 
-.main-catalog__main-text {
-  font-size: 36px;
-  line-height: 60px;
-  font-family: "Oswald-Regular", sans-serif;
-  padding-bottom: 2px;
-  margin-top: 17px;
-  margin-left: 22px;
-  display: flex;
-}
-
 .main-catalog__good-header {
   font-size: 16px;
   line-height: 20px;
@@ -115,7 +105,18 @@
   .main__catalog-tablet-image{
     display: none;
   }
+  .main-catalog__main-text {
+    font-size: 36px;
+    line-height: 60px;
+    font-family: "Oswald-Regular", sans-serif;
+    padding-bottom: 2px;
+    margin-top: 15px;
+    margin-left: 22px;
+    margin-bottom: 26px;
+    display: flex;
+  }
 }
+
 @media (min-width:@tablet){
   .main-catalog {
     max-width: 761px;
@@ -125,7 +126,7 @@
     line-height: 60px;
     font-family: "Oswald-Regular", sans-serif;
     padding-bottom: 2px;
-    margin-top: 47px;
+    margin-top: 42px;
     margin-left: 28px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -133,13 +134,8 @@
     margin-bottom: 162px;
 }
 .main-catalog__goods {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
   margin: 0 auto;
   padding-left: 26px;
@@ -272,16 +268,13 @@ margin: 0 auto;
   left: 32px;
 }
 
-/*.main__catalog-tablet-third-image {
-  width: 151px;
-  height: 157px;
-  top: -45px;
-}*/
-
 .main-catalog__good-last-child {
-  margin-bottom: 38px;
+  margin-bottom: 0;
 }
-
+.find-all-goods__plus-mobile-img {
+  width: 60px;
+  height: 60px;
+}
 }
 
 @media (min-width:@desktop) {
@@ -398,3 +391,4 @@ margin-right: 0;
   margin-bottom: 0;
 }
 }
+
