--- a/source/less/programs.less
+++ b/source/less/programs.less
@@ -112,7 +112,6 @@
 @media (min-width: @tablet) {
   .programs {
     max-width: 708px;
-    padding-left: 12px;
     margin: 0 auto;
   }
 
@@ -134,11 +133,11 @@
   }
   .programs__program:first-child {
     padding: 69px 280px 63px 52px;
-    margin-bottom: 30px;
+    margin-bottom: 28px;
   }
 
   .programs__program-puma {
-    padding: 68px 280px 63px 52px;
+    padding: 68px 280px 62px 52px;
   }
 
   .programs__program-link {
@@ -153,8 +152,8 @@
     font-size: 16px;
     line-height: 24px;
     padding-right: 0;
-    margin-top: 3px;
-    margin-left: 2px;
+    margin-top: 2px;
+    margin-left: 0px;
   }
   .programs__header-program {
     margin-bottom: 25px;
@@ -201,7 +200,7 @@ margin-left: 7px;
     padding-left: 2px;
 }
 .programs__header-program-puma {
-  margin-bottom: 21px;
+  margin-bottom: 24px;
 }
 .programs__header-program-puma-sub {
   position: absolute;
@@ -212,10 +211,10 @@ margin-left: 7px;
 }
 .programs__program-link-catalog-pro {
   padding-top: 33px;
-  padding-left: 3px;
+  padding-left: 0px;
 }
 }
-/*
+
 @media (min-width:@desktop) {
   .programs {
     max-width: 1220px;
@@ -237,6 +236,8 @@ max-width: 570px;
     max-width: 570px;
     margin-top: 0;
     margin-bottom: 0;
+    margin-left: -7px;
+    margin-top: -4px;
       }
       .programs__img_program {
         position: inherit;
@@ -262,6 +263,7 @@ max-width: 570px;
       margin-top: 15px;
       max-width: 476px;
       padding-right: 42px;
+      padding-bottom: 24px;
     }
     .programs__program-main-content-link {
       border-top: 0;
@@ -276,6 +278,8 @@ max-width: 570px;
     .programs__program-puma {
       max-width: 570px;
       padding: 46px 73px 62px 52px;
+      margin-top: -4px;
+      margin-right: 5px;
     }
     .programs__program-content-last-child {
       max-width: 445px;
@@ -302,7 +306,6 @@ max-width: 570px;
     margin-top: 31px;
   }
 }
-*/
 
 
 
